# ChiTypeTrainer

./: CMakeLists.txt  Doxyfile  README.md  SpeedTypeTrainer.cpp
data/: default.json  progress.json  users.json
lib/: CMakeLists.txt
lib/JsonTools/: CMakeLists.txt  file_load.cpp  progress.cpp  user.cpp
lib/JsonTools/include/: file_load.hpp  progress.hpp  user.hpp
